feat(monitoring): update monitoring configuration and dashboards for perfect-parfums-api (#6036)
